# parler-ai

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  server.json
.claude/: settings.json
.claude/commands/: work-next.md
.claude/skills/architect/: SKILL.md  dispatch.md  loop.md  research.md  status.ps1  status.sh  watchdog.ps1  watchdog.sh
.claude/skills/architect-research/: SKILL.md  tactics.md
.claude/skills/write-blog/: SKILL.md  check.sh
.github/workflows/: audit.yml  ci.yml  deploy.yml  release-cli.yml  release-desktop.yml
crates/parler-auth/: Cargo.toml
crates/parler-auth/src/: error.rs  identity.rs  jwt.rs  lib.rs  provision.rs
crates/parler-auth/tests/: auth_live.rs
crates/parler-bin/: Cargo.toml
crates/parler-bin/src/: main.rs
crates/parler-cli/: Cargo.toml
crates/parler-cli/src/: connect.rs  lib.rs  mcp.rs  work.rs  worker.rs
crates/parler-cmux/: Cargo.toml
crates/parler-cmux/src/: driver.rs  lib.rs  runtime.rs
crates/parler-connect-claude/: Cargo.toml
crates/parler-connect-claude/src/: lib.rs
crates/parler-connect-hermes/: Cargo.toml  pyproject.toml
crates/parler-connect-hermes/plugin/parler/: __init__.py  adapter.py  bridge_client.py  hooks.py  plugin.yaml  tools.py
crates/parler-connect-hermes/src/: bridge.rs  launch.rs  lib.rs  serve.rs
crates/parler-connect-opencode/: Cargo.toml
crates/parler-connector/: Cargo.toml
crates/parler-connector/src/: agent.rs  attention.rs  client.rs  config.rs  lib.rs  runtime.rs
crates/parler-connector/tests/: discovery_e2e.rs  mesh_e2e.rs
crates/parler-console/: Cargo.toml
crates/parler-core/: Cargo.toml
crates/parler-core/src/: error.rs  launch.rs  lib.rs  runtime.rs  terminal.rs
crates/parler-delivery/: Cargo.toml
crates/parler-hub/: Cargo.toml
crates/parler-manager/: Cargo.toml
crates/parler-protocol/: Cargo.toml
crates/parler-tmux/: Cargo.toml
crates/parler-web/: Cargo.toml
deploy/: Caddyfile  Dockerfile  README.md  docker-compose.yml  fly.toml  litestream.yml
desktop/: README.md  electron-builder.yml  package.json
desktop/tests/: agent-reconcile-policy.test.mjs
docs/: README.md  agent-mesh.md  autonomous-runtime.md  code-handoff.md  communication.md  discovery.md  engineering-guidelines.md  getting-started.md  loop-engineering.md  patterns.md  storage-and-memory.md  task-lifecycle.md  team-sessions.md  troubleshooting.md  vs-slack.md
docs/blog/: agent-memory-without-a-vector-database.md  how-to-connect-your-ai-agents.md  stop-copy-pasting-between-ai-agents.md
docs/launch/: registry-listings.md
docs/marketing/: README.md  artwork-guide.md  campaigns.md  copy-library.md  positioning.md
docs/research/: beads-gastown-vs-parler.md
examples/codex/: README.md
packaging/homebrew/: parler.rb
scripts/: demo-handoff.sh  dogfood.sh  install.sh  seed-demo.sh  verify.sh
scripts/hooks/: hooks.json  post-tool-use-failure.sh  post-tool-use.sh  pre-tool-use.sh  session-end.sh  session-start.sh
tasks/: backlog.md  lessons.md  todo.md
web/: .env.example  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  sitemap.ts
web/components/: agent-card.tsx  agent-detail.tsx  claude-sim.tsx  copy-button.tsx  directory.tsx  download.tsx  email-capture.tsx  examples.tsx  faq.tsx  footer.tsx  hero.tsx  hub-header.tsx  nav-bar.tsx  particle-field.tsx  reveal.tsx  session-viewer.tsx  sessions-feature.tsx  status-dot.tsx  token-dialog.tsx  verified-badge.tsx
web/lib/: api.ts  blog.ts  seo.ts  types.ts  utils.ts
(+52 files in other folders)
