[package]
name = "parler-cmux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parler cmux integration: a driver over the cmux CLI plus a cmux Runtime and TerminalLayout."

[dependencies]
parler-core = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
