[package]
name = "parler-connect-hermes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parler Hermes connector: the Rust sidecar/bridge over a MeshHandle seam, the launch recipe, plus a Python plugin."

[dependencies]
parler-core = { workspace = true }
parler-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tempfile = { workspace = true }
