# The Hermes-side Python plugin for the Parler connector. Hermes loads this plugin (it runs inside
# the Python gateway runtime); it talks to the Rust sidecar (this crate) over the bridge socket.
# Pinned to the Hermes 0.16 API line — see HERMES_PIN in src/launch.rs; bump both together.
[project]
name = "parler-hermes-plugin"
version = "0.1.0"
description = "Parler mesh plugin for the Hermes (Nous Research) agent gateway."
requires-python = ">=3.11"
dependencies = ["hermes-agent~=0.16"]

[tool.parler]
# The plugin package Hermes loads (copied into <HERMES_HOME>/plugins/parler at launch).
plugin-dir = "plugin/parler"
