[package]
name = "parler-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parler connector — the MeshAgent client core (the MeshTransport seam + the WebSocket HubClient + local identity) shared by the CLI, the MCP server, and the Hermes plugin."

[dependencies]
parler-protocol = { workspace = true }
parler-auth = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
# Pin a rustls crypto provider (`ring`) so we can install it as the process default before dialing
# `wss://`. tokio-tungstenite (ring) and async-nats (aws-lc-rs) both pull rustls 0.23 with different
# providers, which otherwise makes rustls panic ("couldn't determine the CryptoProvider") on the first
# TLS handshake. See `ensure_crypto_provider` in client.rs.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures = { workspace = true }
async-trait = { workspace = true }
nkeys = { workspace = true }
data-encoding = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
parler-hub = { workspace = true }
parler-auth = { workspace = true }
parler-protocol = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
