[package]
name = "parler-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parler NATS/JetStream binding, the endpoint, and the host-integration contracts (Runtime/Terminal/Launch)."

[dependencies]
parler-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
